# mcp-server-ietf

./: Makefile  README.md  TODOs.md  pyproject.toml
src/mcp_server_ietf/: __init__.py  rfc_parser.py  server.py
tests/: test_server.py
